2008-01-08  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* tests/acloca20.test: Use `--force' with the second $AUTOCONF,
	to force update on fast machines where both autoconf invocations
	happen within the same second.
	Report by Greg Schafer.

2008-01-07  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* automake.in (scan_autoconf_files): Sort loop over
	%required_aux_file, for stable verbose output.
	Report by Bruno Haible.

	* INSTALL, lib/INSTALL, lib/config.guess, lib/config.sub,
	lib/texinfo.tex: Sync from upstream.

	* tests/ccnoco.test (Mycomp): Use a tighter match for -c -o,
	to avoid matching for example `LDFLAGS=-Wl,--sort-common'.
	* THANKS: Update.
	Report and analysis by Carsten Lohrke and Mike Frysinger.

2008-01-07  Stepan Kasal  <skasal@redhat.com>

	* automake.in (handle_texinfo_helper, handle_lib_objects): Fix
	typos in comments.

2008-01-02  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* automake.in: Remove debugging leftover.

	Bump copyright years.
	* aclocal.in (write_aclocal, version): Likewise.
	* automake.in ($gen_copyright, version): Likewise.
	* doc/automake.texi: Likewise.

2007-11-18  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* tests/output13.test: New test.
	* tests/Makefile.am: Adjust.
	Prompted by report from Bruno Haible in
	<http://lists.gnu.org/archive/html/bug-gnulib/2007-10/msg00479.html>.

	Fix signal handling in aclocal.
	* aclocal.in (unlink_tmp): If invoked by a signal, note so
	in verbose mode.  Reinstall default signal handler and reraise,
	to transport the interrupt information.

2007-11-12  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Avoid spurious test failure with `make check TESTS=check5.test'.
	* tests/check5.test: unset TESTS.

2007-11-11  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Fix default includes ordering to be `-I. -I$(srcdir) ...' again.
	* automake.in (handle_compile): Put -I$(srcdir) before include
	paths for config headers, as was done before Automake 1.10, but