@@ -24,6 +24,7 @@ Angus Leeming		a.leeming@ic.ac.uk
 Anthony Green		green@cygnus.com
 Arkadiusz Miskiewicz	misiek@pld.ORG.PL
 Art Haas		ahaas@neosoft.com
+Arto C. Nirkko		anirkko@insel.ch
 Assar Westerlund	assar@sics.se
 Axel Belinfante		Axel.Belinfante@cs.utwente.nl
 Bas Wijnen		shevek@fmf.nl
