@@ -1,5 +1,9 @@
 2008-01-08  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	* Makefile.am (dist-hook): New, ensure world-executable tests.
+	* THANKS: Update.
+	Report by Arto C. Nirkko.
+
 	* tests/acloca20.test: Use `--force' with the second $AUTOCONF,
 	to force update on fast machines where both autoconf invocations
 	happen within the same second.
